GNOME Bugzilla – Bug 683059
doesn't strip new line from filename
Last modified: 2012-08-30 20:46:53 UTC
Created attachment 222974 [details] screenshot If a filename has an embedded new line we don't handle it very well.
Created attachment 222984 [details] [review] Don't allow multiline filenames
Created attachment 222991 [details] [review] Don't allow multiline filenames
Review of attachment 222991 [details] [review]: Looks good to me.