Don't allow multiline filenames

https://bugzilla.gnome.org/show_bug.cgi?id=683059